--- a/WPF/Mob/RABBIT.xaml
+++ b/WPF/Mob/RABBIT.xaml
@@ -12,7 +12,7 @@
         <Label Content="{Binding obj.Age}" Height="25" Width="35" HorizontalAlignment="Left" Margin="274,80,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
 
         <ComboBox HorizontalAlignment="Left" Height="20" Margin="73,33,0,0" VerticalAlignment="Top" Width="171"
-                  Name="Type" Text="{Binding obj.RabbitType}" Style="{StaticResource ComboBoxStyle}"/>
+                  Name="Type" Text="{Binding obj.RabbitType}" Style="{StaticResource ComboBoxStyle}" IsReadOnly="True"/>
 
         <Button Content="随机种类" HorizontalAlignment="Left" Height="20" Margin="249,33,0,0" VerticalAlignment="Top" Width="60" Click="Button_Click"
                 Style="{StaticResource Button}"/>
