--- a/WPF/Mob/Other/AIChange.xaml
+++ b/WPF/Mob/Other/AIChange.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MythicMobs_edit.WPF.Other.AIChange"
+﻿<Window x:Class="MythicMobs_edit.WPF.Mob.Other.AIChange"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
