--- a/WPF/Mob/Other/Message.xaml
+++ b/WPF/Mob/Other/Message.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="MythicMobs_edit.WPF.Other.Message"
+﻿<Window x:Class="MythicMobs_edit.WPF.Mob.Other.Message"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MythicMobs_edit.WPF.Other"
+        xmlns:local="clr-namespace:MythicMobs_edit.WPF.Mob.Other"
         mc:Ignorable="d"
         Title="" Height="102" Width="214" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Icon="/MythicMobs_edit;component/icon.ico">
     <Grid Background="Black">
