--- a/WPF/Mob/Effects_type/BlockMask.xaml
+++ b/WPF/Mob/Effects_type/BlockMask.xaml
@@ -1,13 +1,12 @@
-﻿<Window
+﻿<Window x:Class="MythicMobs_edit.WPF.Mob.Effects_type.BlockMask"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MythicMobs_edit.WPF.Mob.Effects_type"
         xmlns:Other="clr-namespace:MythicMobs_edit.WPF.Mob.Other" 
-        x:Class="MythicMobs_edit.WPF.Mob.Effects_type.BlockMask"
         mc:Ignorable="d"
-        Title="修改粒子效果：BlockMask" Height="285" Width="582" Background="Black" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        Title="修改粒子效果：BlockMask" Height="451" Width="393" Background="Black" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid>
         <Label Content="方块名字" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
         <TextBox HorizontalAlignment="Left" Height="20" Margin="68,4,0,0" TextWrapping="Wrap" Text="{Binding Effects.Option.material}" VerticalAlignment="Top" Width="120"
@@ -15,25 +14,25 @@
         <Label Content="方块数据" HorizontalAlignment="Left" Margin="193,0,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
         <TextBox HorizontalAlignment="Left" Height="20" Margin="256,2,0,0" TextWrapping="Wrap" Text="{Binding Effects.Option.data}" VerticalAlignment="Top" Width="120"
                  PreviewTextInput="TextCompositionEventArgs" Style="{StaticResource TextBox}"/>
-        <Label Content="效果半径" HorizontalAlignment="Left" Margin="381,0,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="444,3,0,0" TextWrapping="Wrap" Text="{Binding Effects.Option.radius}" VerticalAlignment="Top" Width="120"
+        <Label Content="效果半径" HorizontalAlignment="Left" Margin="5,30,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="68,33,0,0" TextWrapping="Wrap" Text="{Binding Effects.Option.radius}" VerticalAlignment="Top" Width="120"
                  PreviewTextInput="TextCompositionEventArgs" Style="{StaticResource TextBox}"/>
         <Label Content="持续时间" HorizontalAlignment="Left" Margin="193,30,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
         <TextBox HorizontalAlignment="Left" Height="20" Margin="256,33,0,0" TextWrapping="Wrap" Text="{Binding Effects.Option.duration}" VerticalAlignment="Top" Width="120"
                  PreviewTextInput="TextCompositionEventArgs" Style="{StaticResource TextBox}"/>
-        <Label Content="形状" HorizontalAlignment="Left" Margin="391,30,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="444,33,0,0" TextWrapping="Wrap" Text="{Binding Effects.Option.shape}" VerticalAlignment="Top" Width="120"
+        <Label Content="形状" HorizontalAlignment="Left" Margin="15,60,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="68,63,0,0" TextWrapping="Wrap" Text="{Binding Effects.Option.shape}" VerticalAlignment="Top" Width="120"
                  Style="{StaticResource TextBox}"/>
-        <CheckBox Content="只有非空气方块掩护" HorizontalAlignment="Left" Margin="306,90,0,0" VerticalAlignment="Top" Style="{StaticResource Check}"
+        <CheckBox Content="只有非空气方块掩护" HorizontalAlignment="Left" Margin="10,90,0,0" VerticalAlignment="Top" Style="{StaticResource Check}"
                   IsChecked="{Binding Effects.Option.noair}"/>
-        <CheckBox Content="只有空气方块掩护" HorizontalAlignment="Left" Margin="444,90,0,0" VerticalAlignment="Top" Style="{StaticResource Check}"
+        <CheckBox Content="只有空气方块掩护" HorizontalAlignment="Left" Margin="148,90,0,0" VerticalAlignment="Top" Style="{StaticResource Check}"
                   IsChecked="{Binding Effects.Option.onlyair}"/>
-        <Button Content="OK" HorizontalAlignment="Left" Margin="489,222,0,0" VerticalAlignment="Top" Width="75" Height="20" Style="{StaticResource Button}" Click="Button_Click" IsDefault="True"/>
+        <Button Content="OK" HorizontalAlignment="Left" Margin="301,385,0,0" VerticalAlignment="Top" Width="75" Height="20" Style="{StaticResource Button}" Click="Button_Click" IsDefault="True"/>
 
-        <Other:Skill_Tag HorizontalAlignment="Left" Height="220" Margin="0,30,0,0" VerticalAlignment="Top" Width="292" x:Name="Type"/>
-        <Other:Triggers HorizontalAlignment="Left" Height="93" Margin="292,115,0,0" VerticalAlignment="Top" Width="280" x:Name="Triggers_"/>
-        <Label Content="噪点" HorizontalAlignment="Left" Margin="391,60,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="444,63,0,0" TextWrapping="Wrap" Text="{Binding Effects.Option.noise}" VerticalAlignment="Top" Width="120"
+        <Other:Skill_Tag HorizontalAlignment="Left" Height="220" Margin="0,110,0,0" VerticalAlignment="Top" Width="292" x:Name="Type"/>
+        <Other:Triggers HorizontalAlignment="Left" Height="93" Margin="0,325,0,0" VerticalAlignment="Top" Width="280" x:Name="Triggers_"/>
+        <Label Content="噪点" HorizontalAlignment="Left" Margin="203,63,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="256,66,0,0" TextWrapping="Wrap" Text="{Binding Effects.Option.noise}" VerticalAlignment="Top" Width="120"
                  PreviewTextInput="TextCompositionEventArgs" Style="{StaticResource TextBox}"/>
 
     </Grid>
