--- a/WPF/Mob/Effects_type/Flames.xaml
+++ b/WPF/Mob/Effects_type/Flames.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MythicMobs_edit.WPF.Mob.Effects_type.Ender"
+﻿<Window x:Class="MythicMobs_edit.WPF.Mob.Effects_type.Flames"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,12 +6,12 @@
         xmlns:local="clr-namespace:MythicMobs_edit.WPF.Mob.Effects_type"
         xmlns:Other="clr-namespace:MythicMobs_edit.WPF.Mob.Other" 
         mc:Ignorable="d"
-        Title="修改粒子效果：Ender" Height="370" Width="298" Background="Black" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        Title="修改粒子效果：Flames" Height="380" Width="298" Background="Black" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid>
-        <Button Content="OK" HorizontalAlignment="Left" Margin="205,308,0,0" VerticalAlignment="Top" Width="75" Height="20" Style="{StaticResource Button}" Click="Button_Click" IsDefault="True"/>
+        <Button Content="OK" HorizontalAlignment="Left" Margin="205,318,0,0" VerticalAlignment="Top" Width="75" Height="20" Style="{StaticResource Button}" Click="Button_Click" IsDefault="True"/>
 
         <Other:Skill_Tag HorizontalAlignment="Left" Height="220" Margin="-5,0,0,0" VerticalAlignment="Top" Width="292" x:Name="Type"/>
-        <Other:Triggers HorizontalAlignment="Left" Height="93" Margin="0,215,0,0" VerticalAlignment="Top" Width="280" x:Name="Triggers_"/>
+        <Other:Triggers HorizontalAlignment="Left" Height="93" Margin="0,220,0,0" VerticalAlignment="Top" Width="280" x:Name="Triggers_"/>
 
     </Grid>
 </Window>
