--- a/WPF/Mob/Addmob.xaml
+++ b/WPF/Mob/Addmob.xaml
@@ -443,6 +443,33 @@
                     </ListView>
                 </Grid>
             </Expander>
+            <Expander Header="条件" Foreground="#FFFFFFFF">
+                <Grid Height="209">
+                    <ListView HorizontalAlignment="Left" Height="135" VerticalAlignment="Top" Width="313" x:Name="Conditions_T"
+                        Style="{StaticResource ListViewStyle1}" Margin="0,60,0,0">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header="条件" Width="294" DisplayMemberBinding="{Binding Type}"/>
+                            </GridView>
+                        </ListView.View>
+                        <ListView.ContextMenu>
+                            <ContextMenu>
+                                <MenuItem Header="删除" Click="DelectConditionsEvent"/>
+                                <MenuItem Header="修改" Click="ChangeConditionsEvent"/>
+                            </ContextMenu>
+                        </ListView.ContextMenu>
+                    </ListView>
+                    <Label Content="条件类型" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+                    <Label Content="条件类型" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource Label}" Margin="0,30,0,0"/>
+                    <ComboBox HorizontalAlignment="Left" Margin="63,3,0,0" VerticalAlignment="Top" Height="20" Width="178" Style="{StaticResource ComboBoxStyle}"
+                              x:Name="Conditions_Type" IsReadOnly="True"/>
+                    <Button Content="随机类型" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top" Width="60" 
+                            Click="Conditions_Type_r_Click" Style="{StaticResource Button}" Margin="246,3,0,0"/>
+                    <Button Content="添加" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top" Width="60" 
+                            Click="Button_Click_9" Style="{StaticResource Button}" Margin="246,28,0,0"/>
+
+                </Grid>
+            </Expander>
         </StackPanel>
     </Grid>
 </Window>
